# roboaudio

./: CMakeList.txt  README.md  audio_io.py  main.py  package.xml  requirements.txt  setup.py
spatial_audio_processor/: asr.py  doa.py  main_ros.py  utils.py
src/roboaudio/: requirements.txt  setup.cfg  setup.py
src/roboaudio/spatial_audio_processor/: diarization.py  main.py  noise_reduction.py
